--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .bg-gradient {
-  background: linear-gradient(315deg, #f6a144 0%, #994295 100%);
+  background: linear-gradient(0deg, #f5ddc3 45%, #f7c5f4 55%);
 }
 
 body {
-  background-image: url("images/bg.png");
+  background-image: url("images/22.jpg");
 }
