--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .bg-gradient {
-  background: linear-gradient(0deg, #f5ddc3 45%, #f7c5f4 55%);
+  background: linear-gradient(0deg, #f7e5cd 45%, #f7c5f4 55%);
 }
 
 body {
